use new logging API introduced in Java SDK 5.10.0